# wavey

./: .gitignore  README.md
src/: file_load_server.cpp  file_load_server.hpp  file_notification.cpp  file_notification.hpp  gpu_spectrogram.cpp  gpu_spectrogram.hpp  gpu_waveform.hpp  main.cpp  meson.build  primitive_renderer.hpp  renderer.cpp  shader.hpp  state.cpp  state.hpp
